@@ -120,13 +120,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>${maven-jar-plugin.version}</version>
-                <configuration>
-                    <archive>
-                        <manifestEntries>
-                            <Add-Opens>java.base/java.lang java.base/java.lang.invoke</Add-Opens>
-                        </manifestEntries>
-                    </archive>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -135,11 +128,6 @@
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                     <warName>${project.artifactId}</warName>
-                    <archive>
-                        <manifestEntries>
-                            <Add-Opens>java.base/java.lang java.base/java.lang.invoke</Add-Opens>
-                        </manifestEntries>
-                    </archive>
                 </configuration>
             </plugin>
         </plugins>
